fix: enforce json body limit
